name:                unfoldml-hakyll
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/unfoldml-hakyll#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

executable unfoldml-hakyll
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
